--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/public/pwa-512x512.png" />
+
+  <!-- Ícone padrão do navegador -->
+  <link rel="icon" href="/pwa-512x512.png" />
+
+  <!-- Ícones para iOS (Apple) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/pwa-192x192.png" />
+  <meta name="apple-mobile-web-app-title" content="Controle de Dívidas">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="manifest" href="/manifest.webmanifest" />
   <meta name="theme-color" content="#18181b" />
